--- a/src/app/students/list/list.component.html
+++ b/src/app/students/list/list.component.html
@@ -1,3 +1,24 @@
-<ul>
-  <li *ngFor="let s of students.alunos"> {{ s.aluno.nome }} </li>
-</ul>
+
+<h2 class="center">Alunos</h2>
+<table id="table" class="ui sortable celled table">
+    <thead>
+      <tr>
+        <th>Nome</th>
+        <th>Status</th>
+        <th>Mensalidade</th>
+        <th>Ações</th>
+      </tr>
+    </thead>
+    <tbody >
+      <tr *ngFor="let s of students.alunos">
+          <td>  {{ s.aluno.nome }}    </td>
+          <td>  {{ s.aluno.status }}  </td>
+          <td>  {{ s.mensalidade.status }}  </td>
+      </tr>
+    </tbody>
+</table>
+
+
+
+
+ 
