--- a/src/app/students/list/list.component.html
+++ b/src/app/students/list/list.component.html
@@ -1,12 +1,12 @@
 
-<h2 class="center">Alunos</h2>
-<table id="table" class="ui sortable celled table">
+<h2 class="style">Alunos</h2>
+<table id="table" class="ui sortable celled table style">
     <thead>
       <tr>
-        <th>Nome</th>
-        <th>Status</th>
-        <th>Mensalidade</th>
-        <th>Ações</th>
+        <th>NOME</th>
+        <th>STATUS</th>
+        <th>MENSALIDADE</th>
+        <th>AÇÕES</th>
       </tr>
     </thead>
     <tbody >
