--- a/src/app/students/list/list.component.html
+++ b/src/app/students/list/list.component.html
@@ -1,6 +1,5 @@
-
 <h2 class="style">Alunos</h2>
-<table id="table" class="ui sortable celled table style">
+<table id="table" class="ui  very basic selectable striped  sortable celled table style">
     <thead>
       <tr>
         <th>NOME</th>
