--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="ui small menu">
+<div class="ui large menu">
     <div  class="ui dropdown item">
         Alunos <i class="dropdown icon"></i>
         <div class="menu">
@@ -34,9 +34,7 @@
           <a class="item">Spanish</a>
         </div>
       </div>
-      <div class="item">
-          <div class="ui primary button">Sign Up</div>
-      </div>
+      <div></div>
     </div>
   </div>
 
