--- a/src/app/students/list/list.component.css
+++ b/src/app/students/list/list.component.css
@@ -2,3 +2,13 @@
     min-width: 0px;
     text-align: center;
 }
+.searching{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 12pt;
+}
+
+.loading{
+    
+    margin-left: 30%;
+    margin-top:10%;
+}
