--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
         Alunos <i class="dropdown icon"></i>
         <div class="menu">
           <a class="item">Matricular</a>
-          <a class="item">Mostrar</a>
+          <a href="alunos" class="item">Mostrar</a>
         </div>
       </div>
 
