--- a/src/app/students/list/list.component.html
+++ b/src/app/students/list/list.component.html
@@ -1,15 +1,34 @@
 <h2 class="style">Alunos</h2>
-<div class="ui search">
-    <input class="prompt" type="text" name="search" placeholder="Ache alguém =)" [(ngModel)]="search">
-    <div class="results"></div>
+
+<div class="filter-options">
+    <!-- SEARCH -->
+        <div class="ui search find">
+            <input class="prompt" type="text" name="search" placeholder="Ache alguém =)" [(ngModel)]="search">
+            <div class="results"></div>
+        </div>
+    <!-- FILTER -->
+        <div class="ui form select-students-filter">
+            <div class="field">
+                <label> Filtrar alunos por </label>
+                <select [(ngModel)]="select" class="ui dropdown">
+                    <option value="">Selecione uma opção</option>
+                    <option value="Ativo">Ativos </option>
+                    <option value="Inativo">Inativos</option>
+                    <option value="Débito">Mensalidade em débito</option>
+                    <option value="Pago">Mensalidade pagas </option>
+                    <option value="A vencer">Mensalidade a vencer </option>
+                </select>
+            </div>
+        </div>
 </div>
+
 <p class="searching"  *ngIf="search" > {{ "Procurando alunos que contêm o nome "  + search }}</p>
 <div *ngIf="students.length == 0 ">
      <div class="ui active inverted dimmer">
-       <div class="ui text loader">Loading</div>
+       <div class="ui large text loader">Loading</div>
      </div>
-  </div>
-<table id="table" class="ui  very basic selectable striped  sortable celled table style">
+</div>
+<table id="table" class="ui very basic selectable sortable celled table style">
     <thead>
       <tr>
         <th>NOME</th>
@@ -19,7 +38,7 @@
       </tr>
     </thead>
     <tbody >
-      <tr *ngFor="let s of  ( students.alunos | filter:search)">
+      <tr *ngFor="let s of students.alunos | filter:search | selectFilter:select">
           <td>  {{ s.aluno.nome }}    </td>
           <td>  {{ s.aluno.status }}  </td>
           <td>  {{ s.mensalidade.status }}  </td>
