--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,10 @@
     <div  class="ui dropdown item">
         Alunos <i class="dropdown icon"></i>
         <div class="menu">
-          <a class="item">Matricular</a>
+          <a href="alunos/register" class="item">Registrar</a>
           <a href="alunos" class="item">Mostrar</a>
         </div>
       </div>
-
       <div  class="ui dropdown item">
           Administração <i class="dropdown icon"></i>
           <div class="menu">
@@ -16,7 +15,6 @@
             <a class="item">Alunos Inativos</a>
           </div>
         </div>
-
         <div  class="ui dropdown item">
             Treino <i class="dropdown icon"></i>
             <div class="menu">
@@ -24,7 +22,6 @@
               <a class="item">Mostrar</a>
             </div>
           </div>
-   
     <div class="right menu">
       <div  class="ui dropdown item">
         Language <i class="dropdown icon"></i>
